[package]
name = "internxt-core"
version = "0.1.2"
edition = "2024"
rust-version = "1.88"
license = "MIT"
description = "Rust library for interacting with Internxt Drive: auth, crypto, Drive REST + streaming network transfers"
repository = "https://github.com/Bebbssos/internxt-core-rust"
readme = "README.md"
keywords = ["internxt", "drive", "e2ee", "storage", "crypto"]
categories = ["cryptography", "api-bindings", "filesystem"]

[lib]
name = "internxt_core"
path = "src/lib.rs"

[features]
default = ["fs", "thumbnails"]
# Native filesystem + runtime-bound transfer helpers: the path-based upload
# (`upload_file_to_network`), multipart upload, and `create_folder_with_retry`.
# These pull in `tokio::fs` / `tokio::spawn` / `tokio::time`. Disable to build only
# the reader/writer surface (crypto, api, network, and the generic streaming
# `upload_stream_to_network` / `download_file_to_writer`).
fs = []
# Image thumbnail generation (`thumbnail` module): decode/resize/encode a 300x300
# PNG preview via the `image` crate. Mirrors og's sharp-based ThumbnailService.
# Pulls in `image`; disable for a smaller build without preview upload.
thumbnails = ["dep:image"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
hex = "0.4"
base64 = "0.22"
base32 = "0.5"
rand = "0.10"
futures-util = "0.3"
bytes = "1"

# thumbnails feature: decode/resize/encode preview images. Only the formats og
# treats as thumbnailable (jpg/png/webp/gif/tiff) are enabled to keep it lean.
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif", "tiff"], optional = true }

# crypto
aes = "0.9"
cbc = { version = "0.2", features = ["alloc"] }
ctr = "0.10"
aes-gcm = "0.11"
pbkdf2 = "0.13"
sha1 = "0.11"
sha2 = "0.11"
ripemd = "0.2"
md-5 = "0.11"
hmac = "0.13"
cipher = "0.5"
bip39 = "2"
pgp = "0.20"
safe_pqc_kyber = { version = "0.6", default-features = false, features = ["kyber512", "std"] }
blake3 = "1"

# blake3's build.rs probes `-mavx512f`/`-mavx512vl` with is_flag_supported(),
# which zig/clang accepts syntactically for i686 even though the actual
# AVX-512 intrinsics don't codegen in 32-bit mode ("requires target feature
# evex512"/"avx512f") — a real upstream cross-compile gap, not a flag we can
# tune around. `pure` (Rust-only, no C/asm; bit-identical output — it's a
# different implementation of the same algorithm, not a different one) is
# the only lever blake3 1.8.5's build.rs actually reads for this (the
# `no_avx512` feature is declared in its Cargo.toml but never checked in
# build.rs). Scoped to x86-32 only — x86_64/aarch64/arm keep the fast path.
[target.'cfg(target_arch = "x86")'.dependencies]
blake3 = { version = "1", features = ["pure"] }

[profile.release]
opt-level = 3
lto = true
